--- a/Travel_Library/Views/Home/CrearLibro.cshtml
+++ b/Travel_Library/Views/Home/CrearLibro.cshtml
@@ -31,6 +31,7 @@
                         </div>
                         <div class="d-grid gap-2 mb-3">
                             <button class="btn btn-primary" type="submit">Crear Libro</button>
+                            <a class="btn btn-warning" asp-action="Index">Volver</a>
                         </div>
                     </form>
                 </div>
