--- a/Travel_Library/Views/Shared/_Layout.cshtml
+++ b/Travel_Library/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Autor" asp-action="Index">Autores</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Editorial" asp-action="Index">Editoriales</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CerrarSesion">Cerrar Sesión</a>
                         </li>
                     </ul>
