--- a/Travel_Library/Views/Home/CrearLibro.cshtml
+++ b/Travel_Library/Views/Home/CrearLibro.cshtml
@@ -11,6 +11,12 @@
     <hr />
     <div class="row justify-content-center">
         <div class="col-6 col-xl-6 col-md-6">
+            @if (ViewData["ErrorInsertar"] != null)
+            {
+                <div class="alert alert-danger" role="alert">
+                    @ViewData["ErrorInsertar"]
+                </div>
+            }
             <div class="card">
                 <div class="card-header">
                     <strong>Crear Nuevo Libro</strong>
